<resources>
    <string name="app_name">eBelle_Test</string>

    <string name="open_navigation_drawer">Open Navigation Drawer</string>
    <string name="close_navigation_drawer">Close Navigation Drawer</string>


    <string name="female">Female</string>
    <string name="male">Male</string>

    <string name="None">None</string>
    <string name="Receptionist">Receptionist</string>
    <string name="Financial_Manager">Financial Manager</string>


    <string-array name="ReorderSpinnerItems">
        <item>5</item>
        <item>10</item>
        <item>15</item>
        <item>20</item>
    </string-array>

    <string-array name="ProductServicesSpinnerItems">
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
    </string-array>

    <string-array name="ServiceCategory">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>

    <string-array name="paymentMethods">
        <item>Salary</item>
        <item>Commission</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_customer_sign_in">Sign In</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_sign_in">SignIn</string>
    <string name="title_activity_tab">TabActivity</string>
    <string name="title_activity_tabbed2">Tabbed2Activity</string>
    <string name="title_activity_tabbed_test">TabbedTest</string>
    <string name="title_activity_main_nav">MainNavActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

</resources>
