<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="4">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp">

        <TextView
            android:id="@+id/BasicInfo_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Basic Information"
            android:textAlignment="textStart"
            android:textStyle="bold"
            style="@style/smallText"
            android:textColor="@color/colorPrimaryDark" />

        <ImageView
            android:id="@+id/EmpProfilePicture"
            android:layout_width="291dp"
            android:layout_height="68dp"
            android:clickable="true"
            android:layout_below="@+id/BasicInfo_text_view"
            android:layout_centerInParent="true"
            android:src="@drawable/ic_account_profileimage" />

        <EditText
            android:id="@+id/EmpFirstName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/EmpProfilePicture"
            android:drawableStart="@drawable/person"
            android:drawablePadding="15dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="16dp"
            android:layout_marginLeft="16dp"
            android:hint="First Name"
            android:ems="10"
            android:inputType="textPersonName"
            style="@style/font_light"/>

        <EditText
            android:id="@+id/EmpLastName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/EmpFirstName"
            android:hint="Last Name"
            android:drawableStart="@drawable/person"
            android:drawablePadding="15dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="16dp"
            android:layout_marginLeft="16dp"
            android:ems="10"
            android:inputType="textPersonName"
            style="@style/font_light"/>

        <RadioGroup
        android:id="@+id/genderRadioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/EmpLastName"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal">

        <RadioButton
            android:id="@+id/femaleRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/gender"
            android:drawablePadding="15dp"
            android:paddingEnd="15dp"
            android:text="@string/female"
            style="@style/smallText"/>

        <RadioButton
            android:id="@+id/maleRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/gender"
            android:drawablePadding="15dp"
            android:text="@string/male"
            style="@style/smallText"
            android:paddingLeft="15dp"/>
    </RadioGroup>


        <TextView
            android:id="@+id/EmpcontactInfo_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/genderRadioGroup"
            android:layout_margin="5dp"
            android:text="Contact Information"
            android:textAlignment="textStart"
            android:textStyle="bold"
            style="@style/smallText"
            android:textColor="@color/colorPrimaryDark" />


        <EditText
            android:id="@+id/EmpContactNo_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/contact_number"
            android:drawablePadding="15dp"
            android:layout_below="@+id/EmpcontactInfo_text_view"
            android:layout_marginTop="10dp"
            android:layout_marginRight="16dp"
            android:layout_marginLeft="16dp"
            android:hint="Contact No."
            android:inputType="phone" />

        <EditText
            android:id="@+id/EmpEmail_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/email_address"
            android:drawablePadding="15dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="16dp"
            android:layout_marginLeft="16dp"
            android:layout_below="@+id/EmpContactNo_editText"
            android:hint="Email"
            android:inputType="textEmailAddress" />

        <TextView
            android:id="@+id/EmpInfo_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/EmpEmail_editText"
            android:layout_marginTop="5dp"
            android:text="Employment Information"
            android:textAlignment="textStart"
            style="@style/smallText"
            android:textStyle="bold"
            android:textColor="@color/colorPrimaryDark" />

        <TextView
            android:id="@+id/EmpServices_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/EmpServices_spinner"
            android:text="Employee Service"
            android:textSize="17sp"
            style="@style/font_light"/>

        <Spinner

            android:id="@+id/EmpServices_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_marginBottom="180dp"
            android:layout_marginEnd="27dp"
            android:paddingLeft="50dp"
            android:text="Services" />

        <TextView
            android:id="@+id/EmpSalary_text_view"
            style="@style/font_light"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="140dp"
            android:textSize="17sp"
            android:text="Choose Salary Method" />

        <Spinner
            android:id="@+id/SalaryMethod_Spinner"
            android:layout_width="142dp"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/EmpServices_spinner"
            android:layout_alignTop="@+id/EmpSalary_text_view"
            android:entries="@array/paymentMethods">

        </Spinner>

        <TextView
            android:id="@+id/EmpAccessRight_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/SalaryMethod_Spinner"
            android:layout_marginTop="17sp"
            android:text="Access Rights"
            style="@style/smallText"
            android:textStyle="bold"
            android:textColor="@color/colorPrimaryDark" />

        <RadioGroup
            android:id="@+id/empAccessRightGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@+id/EmpAccessRight_text_view"
            android:gravity="center_horizontal"
            android:padding="10dp">

                <RadioButton
                    android:id="@+id/noAccessRight"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/None"
                    android:onClick="onRadioButtonClicked"
                    android:textAlignment="center" />

                <RadioButton
                    android:id="@+id/receptionistAccessRight"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Receptionist"
                    android:onClick="onRadioButtonClicked"
                    android:textAlignment="center"/>

                <RadioButton
                    android:id="@+id/financeAccessRight"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Financial_Manager"
                    android:onClick="onRadioButtonClicked"
                    android:textAlignment="center"/>

        </RadioGroup>

        <Button
            android:id="@+id/addEmployee_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/empAccessRightGroup"
            android:layout_centerInParent="true"
            android:layout_centerHorizontal="true"
            android:padding="5dp"
            style="@style/normalRoundButton"
            android:text="Add Employee" />
    </RelativeLayout>

</LinearLayout>